use eclipse and jlink to migrate to bookworm